; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_omap_hsmmc.c_omap_hsmmc_init_card.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_omap_hsmmc.c_omap_hsmmc_init_card.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmc_host = type { i32 }
%struct.mmc_card = type { i32 }
%struct.omap_hsmmc_host = type { i32 }
%struct.TYPE_2__ = type { i32 (%struct.mmc_card*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mmc_host*, %struct.mmc_card*)* @omap_hsmmc_init_card to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_hsmmc_init_card(%struct.mmc_host* %0, %struct.mmc_card* %1) #0 {
  %3 = alloca %struct.mmc_host*, align 8
  %4 = alloca %struct.mmc_card*, align 8
  %5 = alloca %struct.omap_hsmmc_host*, align 8
  store %struct.mmc_host* %0, %struct.mmc_host** %3, align 8
  store %struct.mmc_card* %1, %struct.mmc_card** %4, align 8
  %6 = load %struct.mmc_host*, %struct.mmc_host** %3, align 8
  %7 = call %struct.omap_hsmmc_host* @mmc_priv(%struct.mmc_host* %6)
  store %struct.omap_hsmmc_host* %7, %struct.omap_hsmmc_host** %5, align 8
  %8 = load %struct.omap_hsmmc_host*, %struct.omap_hsmmc_host** %5, align 8
  %9 = call %struct.TYPE_2__* @mmc_pdata(%struct.omap_hsmmc_host* %8)
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (%struct.mmc_card*)*, i32 (%struct.mmc_card*)** %10, align 8
  %12 = icmp ne i32 (%struct.mmc_card*)* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load %struct.omap_hsmmc_host*, %struct.omap_hsmmc_host** %5, align 8
  %15 = call %struct.TYPE_2__* @mmc_pdata(%struct.omap_hsmmc_host* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.mmc_card*)*, i32 (%struct.mmc_card*)** %16, align 8
  %18 = load %struct.mmc_card*, %struct.mmc_card** %4, align 8
  %19 = call i32 %17(%struct.mmc_card* %18)
  br label %20

20:                                               ; preds = %13, %2
  ret void
}

declare dso_local %struct.omap_hsmmc_host* @mmc_priv(%struct.mmc_host*) #1

declare dso_local %struct.TYPE_2__* @mmc_pdata(%struct.omap_hsmmc_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
